engine/tests/detection_corpus/bad/secret_google.js
const mapsClient = new Client({ key: "AIzaSyA1bC2dE3fG4hI5jK6lM7nO8pQ9rS0tUv" });
